got the function toitally working

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html class="bg-color9">  
+<html class="bg-color9 white-text">  
 
 <head>
 
@@ -82,6 +82,7 @@
 			<a onclick=shuffle() ><input id="shuffle-button" type="button" value="shuffle" style="display: none;"/></a>
 	</div>
 	<div class="prefix_4 grid_10 suffix_2 ">
+		<label class="first-card">Player 1 Cards<label></br>
 		<img id="p1card1" class="first-card" src="images/b2fv.png"/>
 		<img id="p1card2" src="images/b2fv.png"/>
 			</br>	
