fixing a dealing issue

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<a onclick=shuffle() ><input id="shuffle-button" type="button" value="shuffle" style="display: none;"/></a>
 	</div>
 	<div class="prefix_4 grid_10 suffix_2 ">
-		<label class="first-card">Player 1 Cards<label></br>
+		<h3 class="first-card">Player 1 Cards</h3></br>
 		<img id="p1card1" class="first-card" src="images/b2fv.png"/>
 		<img id="p1card2" src="images/b2fv.png"/>
 			</br>	
@@ -91,7 +91,8 @@
 		<img id="flop3" src="images/b2fv.png"/>
 		<img id="turn"  src="images/b2fv.png"/>
 		<img id="river" src="images/b2fv.png"/>
-		</br>	
+		</br>
+		<h3 class="first-card">Player 2 Cards</h3></br>
 		<img id="p2card1" class="first-card" src="images/b2fv.png"/>
 		<img id="p2card2" src="images/b2fv.png"/>
 		
