cleaned up the js code and add some styles

--- a/index.html
+++ b/index.html
@@ -11,64 +11,12 @@
   <script src="scripts/jquery-1.5.1.js" type="text/javascript"></script>
   <script src="scripts/knockout-latest.debug.js" type="text/javascript"></script>
   <script src="scripts/TableModel.js" type="text/javascript"></script>
-  <script type="text/javascript">
-  
-  var deal = function(){
-		TableModel.deal();
-		$("#deal-button").toggle();
-		$("#flop-button").toggle();
-		$("#p1card1").attr("src", TableModel.table.p1Cards[0].image);
-		$("#p1card2").attr("src", TableModel.table.p1Cards[1].image);
-		$("#p2card1").attr("src", TableModel.table.p2Cards[0].image);
-		$("#p2card2").attr("src", TableModel.table.p2Cards[1].image);
-  };
-  var flop = function(){
-		
-		$("#flop-button").toggle();
-		$("#turn-button").toggle();
-		$("#flop1").attr("src", TableModel.table.flop[0].image);
-		$("#flop2").attr("src", TableModel.table.flop[1].image);
-		$("#flop3").attr("src", TableModel.table.flop[2].image);
-		$("#p1-hand").attr("innerHTML" ,"Player 1 Has:" +TableModel.flopResult(TableModel.table.p1Cards));
-		$("#p2-hand").attr("innerHTML" ,"Player 2 Has:" +TableModel.flopResult(TableModel.table.p2Cards));
-  };
-  var turn1 = function(){		
-		$("#turn-button").toggle();
-		$("#river-button").toggle();
-		$("#turn").attr("src", TableModel.table.turn.image);
-		$("#p1-hand").attr("innerHTML" ,"Player 1 Has:" +TableModel.turnResult(TableModel.table.p1Cards));
-		$("#p2-hand").attr("innerHTML" ,"Player 2 Has:" +TableModel.turnResult(TableModel.table.p2Cards));
-  };
-  var river1 = function(){
-		
-		$("#river-button").toggle();
-		$("#shuffle-button").toggle();
-		$("#river").attr("src", TableModel.table.river.image);
-		$("#p1-hand").attr("innerHTML" ,"Player 1 Has:" +TableModel.riverResult(TableModel.table.p1Cards));
-		$("#p2-hand").attr("innerHTML" ,"Player 2 Has:" +TableModel.riverResult(TableModel.table.p2Cards));
-  };
-  var shuffle = function(){
-		TableModel.shuffle();
-		$("#shuffle-button").toggle();
-		$("#deal-button").toggle();
-		$("#flop1").attr("src", "images/b2fv.png");
-		$("#flop2").attr("src", "images/b2fv.png");
-		$("#flop3").attr("src", "images/b2fv.png");
-		$("#turn").attr("src", "images/b2fv.png");
-		$("#river").attr("src", "images/b2fv.png");
-		$("#p1card1").attr("src", "images/b2fv.png");
-		$("#p1card2").attr("src", "images/b2fv.png");
-		$("#p2card1").attr("src", "images/b2fv.png");
-		$("#p2card2").attr("src", "images/b2fv.png");
-		$("#p1-hand").attr("innerHTML","");
-		$("#p2-hand").attr("innerHTML","");
-  };
-  
-  $(document).ready(function () {
-					TableModel.buildDeck();
-						
-					});
-  
+  <script src="scripts/TexasHoldEmPageFunctions.js" type="text/javascript"></script>
+
+  <script type="text/javascript">  
+	  $(document).ready(function () {
+							TableModel.buildDeck();							
+						});  
   </script>
 
 </head>
@@ -94,19 +42,31 @@
 		<span id="p2-hand"></span></br>
 	</div>
 	<div class="prefix_4 grid_10 suffix_2 ">
-		<h3 class="first-card">Player 1 Cards</h3></br>
-		<img id="p1card1" class="first-card" src="images/b2fv.png"/>
-		<img id="p1card2" src="images/b2fv.png"/>
-			</br>	
-		<img id="flop1" src="images/b2fv.png"/>
-		<img id="flop2" src="images/b2fv.png"/>
-		<img id="flop3" src="images/b2fv.png"/>
-		<img id="turn"  src="images/b2fv.png"/>
-		<img id="river" src="images/b2fv.png"/>
+		<div class="wrapper">
+			<div class="player-cards">
+				<h3 class="center">Player 1 Cards</h3></br>		
+				<img id="p1card1" src="images/b2fv.png"/>
+				<img id="p1card2" src="images/b2fv.png"/>
+			</div>
+		</div>
+			</br>
+		<div class="board-wrapper">
+			<div class="board">			
+				<img id="flop1" src="images/b2fv.png"/>
+				<img id="flop2" src="images/b2fv.png"/>
+				<img id="flop3" src="images/b2fv.png"/>
+				<img id="turn"  src="images/b2fv.png"/>
+				<img id="river" src="images/b2fv.png"/>
+			</div>
+		</div>
 		</br>
-		<h3 class="first-card">Player 2 Cards</h3></br>
-		<img id="p2card1" class="first-card" src="images/b2fv.png"/>
-		<img id="p2card2" src="images/b2fv.png"/>
+		<div class="wrapper">
+			<div class="player-cards">
+				<h3 class="center">Player 2 Cards</h3></br>		
+				<img id="p2card1" src="images/b2fv.png"/>
+				<img id="p2card2" src="images/b2fv.png"/>
+			</div>
+		</div>
 		
 	</div>
 		
